ChatBot implementation with network API

--- a/app/src/main/res/layout/item_received.xml
+++ b/app/src/main/res/layout/item_received.xml
@@ -3,14 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginStart="8dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginEnd="8dp"
     android:background="@drawable/ic_received_bg">
 
     <TextView
         android:id="@+id/txt_message_receive"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:text="Hello"
         android:textSize="@dimen/text_16"
         app:layout_constraintEnd_toEndOf="parent"
