--- a/app/src/main/res/layout/item_sent.xml
+++ b/app/src/main/res/layout/item_sent.xml
@@ -22,9 +22,18 @@
             android:layout_marginEnd="8dp"
             android:text="Hello"
             android:textSize="@dimen/text_16"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/img_delivery_status"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/img_delivery_status"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:src="@drawable/ic_not_sent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
 
     </android.support.constraint.ConstraintLayout>
